# qt-cad-widget

./: .gitignore  CMakeLists.txt
LibreCAD/: CMakeLists.txt
LibreCAD/libraries/muparser/src/: muParserDLL.cpp
LibreCAD/librecad/src/: src.pro
LibreCAD/viewer/: mainwindow.cpp  mainwindow.h  viewer_widget.cpp  viewer_widget.h
data/: DJ1.dxf  Drawing1.dxf  example1.dxf  example2.dxf
example/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
fonts/: simhei.lff  simsun.lff  standard.lff
